Fix wkhtmltopdf version for travis

--- a/buildout.d/travis.cfg
+++ b/buildout.d/travis.cfg
@@ -17,3 +17,13 @@ allow-hosts =
 parts -=
     omelette
     sphinxbuilder
+
+[wkhtmltopdf]
+url = http://wkhtmltopdf.googlecode.com/files/wkhtmltopdf-0.9.9-static-amd64.tar.bz2
+download-only = false
+
+[wkhtmltopdf_executable]
+cmds =
+     cd ${buildout:directory}/parts/wkhtmltopdf
+     mv wkhtmltopdf-amd64 wkhtmltopdf
+     chmod +x wkhtmltopdf
