Moved OSX specifics in osx.cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,2 +1,5 @@
 [buildout]
-extends = buildout.d/development.cfg
+extends =
+     buildout.d/development.cfg
+#    Uncomment to use with OSX.
+#    buildout.d/osx.cfg
