--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
   - $(which echo) -e "[buildout]\nextends = buildout.d/travis.cfg" > buildout.cfg
   - python bootstrap.py
   - bin/buildout
+  - parts/wkhtmltopdf/wkhtmltopdf http://www.google.com
 
 script:
   - bin/test -m collective.sendaspdf
