Test i386 for Travis

--- a/buildout.d/travis.cfg
+++ b/buildout.d/travis.cfg
@@ -18,3 +18,5 @@ parts -=
     omelette
     sphinxbuilder
 
+[wkhtmltopdf]
+url = http://wkhtmltopdf.googlecode.com/files/wkhtmltopdf-0.9.9-static-i386.tar.bz2
