--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -9,10 +9,10 @@ develop = .
 extensions =
     buildout_versions
 eggs =
-     Plone
-     collective.sendaspdf
+
 parts =
     scripts
+    instance
     wkhtmltopdf
     wkhtmltopdf_executable
 
@@ -34,9 +34,15 @@ recipe = plone.recipe.zope2instance
 user = admin:admin
 debug-mode = off
 verbose-security = on
-eggs = ${buildout:eggs}
+
+eggs =
+     ${buildout:eggs}
+     Plone
+     collective.sendaspdf
+
 environment-vars =
     WKHTMLTOPDF_PATH ${wkhtmltopdf:location}/wkhtmltopdf
+
 
 # ==========================================
 # Download wkhtmltopdf
