--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -2,10 +2,9 @@
 extends = base.cfg
 
 parts +=
-#    omelette
 #    sphinxbuilder
+    omelette
     test
-    instance
 
 
 # =========================
@@ -20,7 +19,7 @@ auto-checkout =
 # ===============================================
 [omelette]
 recipe = collective.recipe.omelette
-eggs = ${buildout:eggs}
+eggs = ${instance:eggs}
 
 
 # ======================================
@@ -51,12 +50,11 @@ cmds=
 [environment]
 WKHTMLTOPDF_PATH=${buildout:directory}/parts/wkhtmltopdf/wkhtmltopdf
 
-
 [test]
 recipe = zc.recipe.testrunner
 defaults = ['--exit-with-status', '--auto-color', '--auto-progress']
 eggs =
-    ${buildout:eggs}
+    ${instance:eggs}
     pdfminer
 
 environment = environment
