Added first working version of the wk_worker, needs cleaning

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -13,6 +13,7 @@ eggs =
 parts =
     scripts
     instance
+    wk_worker
     wkhtmltopdf
     wkhtmltopdf_executable
 
@@ -25,6 +26,11 @@ recipe = z3c.recipe.scripts
 dependent-scripts = true
 interpreter = zopepy
 eggs = ${buildout:eggs}
+
+[wk_worker]
+recipe = zc.recipe.egg
+eggs = collective.sendaspdf
+
 
 # ==================================
 # Create a development Zope instance
