Use Queue instead of threads

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -12,11 +12,16 @@ eggs =
 
 parts =
     scripts
+    supervisor
     instance
     wk_worker
     wkhtmltopdf
     wkhtmltopdf_executable
 
+
+[environment]
+WKHTMLTOPDF_PATH=${buildout:directory}/parts/wkhtmltopdf/wkhtmltopdf
+WKHTMLTOPDF_WORKER_PORT=8081
 
 # =============================
 # Generate all scripts for eggs
@@ -27,9 +32,17 @@ dependent-scripts = true
 interpreter = zopepy
 eggs = ${buildout:eggs}
 
+
 [wk_worker]
 recipe = zc.recipe.egg
 eggs = collective.sendaspdf
+environment = environment
+
+[supervisor]
+recipe = collective.recipe.supervisor
+port = 127.0.0.1:8082
+programs =
+      10 wk_worker ${buildout:directory}/bin/wk_worker
 
 
 # ==================================
@@ -68,3 +81,16 @@ cmds =
      cd ${buildout:directory}/parts/wkhtmltopdf
      mv wkhtmltopdf-amd64 wkhtmltopdf
      chmod +x wkhtmltopdf
+
+# ==========================================
+# Prepare test-runner for running unit tests
+# ==========================================
+
+[test]
+recipe = zc.recipe.testrunner
+defaults = ['--exit-with-status', '--auto-color', '--auto-progress']
+eggs =
+    ${instance:eggs}
+    pdfminer
+
+environment = environment
