--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -73,3 +73,8 @@ collective.recipe.cmd = 0.5
 hexagonit.recipe.download = 1.5.1
 pdfminer = 20110515
 
+collective.recipe.supervisor = 0.17
+
+lockfile = 0.9.1
+python-daemon = 1.6
+
