Typo, use tempfile for stdout

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -53,6 +53,7 @@ recipe = plone.recipe.zope2instance
 user = admin:admin
 debug-mode = off
 verbose-security = on
+zserver-threads = 15
 
 eggs =
      ${buildout:eggs}
