Imported various changes from the branch created to fix the issues with multiple wkhtmltopdf instances running. See history file.

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -32,6 +32,7 @@ eggs = ${buildout:eggs}
 [instance]
 recipe = plone.recipe.zope2instance
 user = admin:admin
+zserver-threads = 7
 debug-mode = off
 verbose-security = on
 eggs = ${buildout:eggs}
