Another test for travis-ci

--- a/buildout.d/travis.cfg
+++ b/buildout.d/travis.cfg
@@ -20,3 +20,9 @@ parts -=
 
 [wkhtmltopdf]
 url = http://wkhtmltopdf.googlecode.com/files/wkhtmltopdf-0.9.9-static-i386.tar.bz2
+
+[wkhtmltopdf_executable]
+cmds =
+     cd ${buildout:directory}/parts/wkhtmltopdf
+     mv wkhtmltopdf-i386 wkhtmltopdf
+     chmod +x wkhtmltopdf
