--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,16 @@ python:
 
 install:
   - $(which echo) -e "[buildout]\nextends = buildout.d/travis.cfg" > buildout.cfg
+  - sudo apt-get install -qq pep8 pyflakes
   - python bootstrap.py
   - bin/buildout
   - parts/wkhtmltopdf/wkhtmltopdf http://www.google.com google.pdf
 
 script:
   - bin/test -m collective.sendaspdf
- 
+  - pyflakes collective
+  - pep8 collective 
+
 notifications:
   irc:
   email:
