Travis: call wkhtmltopdf later.
It gives problems on the test server, which means the bin/test script is not even getting executed.
So first we ask the wkhtmltopdf for its version and its help,
then we call bin/test and pyflakes and pep8 and then call kwhtmltopdf with a proper command.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,14 @@ install:
   - sudo apt-get install -qq pep8 pyflakes
   - python bootstrap.py
   - bin/buildout
-  - parts/wkhtmltopdf/wkhtmltopdf http://www.google.com google.pdf
+  - parts/wkhtmltopdf/wkhtmltopdf --version
+  - parts/wkhtmltopdf/wkhtmltopdf --help
 
 script:
   - bin/test -m collective.sendaspdf
   - pyflakes collective
   - pep8 collective 
+  - parts/wkhtmltopdf/wkhtmltopdf http://www.google.com google.pdf
 
 notifications:
   irc:
