List parts/wkhtmltopdf/ in travis, to see why it fails.
Add note on travis.

Let git ignore local.cfg.

--- a/buildout.d/travis.cfg
+++ b/buildout.d/travis.cfg
@@ -1,6 +1,12 @@
 # a buildout specifically prepared for Travis CI to keep it under
 # 15 minutes which is a timeout limit for Travis CI jobs
 
+# Note: there is actually nothing specifically done to keep it under
+# 15 minutes currently, unless it is the socket-timeout and the
+# allow-hosts...  To get more speed boost by avoiding downloading all
+# python packages separately, we should look at
+# https://raw.github.com/collective/buildout.plonetest/master/travis-4.x.cfg
+
 [buildout]
 extends = development.cfg
 
