--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - sudo apt-get install -qq pep8 pyflakes
   - python bootstrap.py
   - bin/buildout
+  - ls parts/wkhtmltopdf/
   - parts/wkhtmltopdf/wkhtmltopdf --version
   - parts/wkhtmltopdf/wkhtmltopdf --help
 
