--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - sudo apt-get install -qq pep8 pyflakes
   - python bootstrap.py
   - bin/buildout
-  - ls parts/wkhtmltopdf/
+  - ls -l parts/wkhtmltopdf/
   - parts/wkhtmltopdf/wkhtmltopdf --version
   - parts/wkhtmltopdf/wkhtmltopdf --help
 
