--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ install:
   - python bootstrap.py
   - bin/buildout
   - ls -l parts/wkhtmltopdf/
+  - ./parts/wkhtmltopdf/wkhtmltopdf
+  - parts/wkhtmltopdf/wkhtmltopdf
   - parts/wkhtmltopdf/wkhtmltopdf --version
   - parts/wkhtmltopdf/wkhtmltopdf --help
 
