Get the new version of wkhtmltopdf
Point WKHTMLTOPDF_PATH directly at the binary, no need for
collective.recipe.cmd

Probably issue: support for .tar.xz archive format.

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -14,7 +14,6 @@ eggs =
 parts =
     scripts
     wkhtmltopdf
-    wkhtmltopdf_executable
 
 
 # =============================
@@ -37,23 +36,12 @@ debug-mode = off
 verbose-security = on
 eggs = ${buildout:eggs}
 environment-vars =
-    WKHTMLTOPDF_PATH ${wkhtmltopdf:location}/wkhtmltopdf
+    WKHTMLTOPDF_PATH ${wkhtmltopdf:location}/wkhtmltopdf/wkhtmltox/bin/wkhtmltopdf
 
 # ==========================================
 # Download wkhtmltopdf
 # ==========================================
 [wkhtmltopdf]
 recipe = hexagonit.recipe.download
-url = http://wkhtmltopdf.googlecode.com/files/wkhtmltopdf-0.9.9-static-amd64.tar.bz2
+url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.0/wkhtmltox-linux-i386_0.12.0-03c001d.tar.xz
 
-# ==========================================
-# Unpack / rename the executable
-# ==========================================
-[wkhtmltopdf_executable]
-recipe = collective.recipe.cmd
-on_install = true
-on_update = true
-cmds =
-     cd ${buildout:directory}/parts/wkhtmltopdf
-     mv wkhtmltopdf-amd64 wkhtmltopdf
-     chmod +x wkhtmltopdf
