--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -14,6 +14,7 @@ eggs =
 parts =
     scripts
     wkhtmltopdf
+    wkhtmltopdf_install
 
 
 # =============================
@@ -36,7 +37,7 @@ debug-mode = off
 verbose-security = on
 eggs = ${buildout:eggs}
 environment-vars =
-    WKHTMLTOPDF_PATH ${wkhtmltopdf:location}/wkhtmltopdf/wkhtmltox/bin/wkhtmltopdf
+    WKHTMLTOPDF_PATH ${wkhtmltopdf_install:binary}
 
 # ==========================================
 # Download wkhtmltopdf
@@ -44,4 +45,15 @@ environment-vars =
 [wkhtmltopdf]
 recipe = hexagonit.recipe.download
 url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.0/wkhtmltox-linux-i386_0.12.0-03c001d.tar.xz
+filename = wkhtmltox.tar.xz
+download-only = true
 
+[wkhtmltopdf_install]
+recipe = collective.recipe.cmd
+on_install = true
+on_update = true
+cmds =
+  cd ${wkhtmltopdf:location}
+  tar xJf ${wkhtmltopdf:filename}
+# This is not used by the recipe, it just shows where the binary finally ends up.
+binary = ${wkhtmltopdf:location}/wkhtmltox/bin/wkhtmltopdf
