--- a/buildout.d/osx.cfg
+++ b/buildout.d/osx.cfg
@@ -2,11 +2,15 @@
 # MacOS version of wkhtmltopdf
 # ==========================================
 [wkhtmltopdf]
-url = http://wkhtmltopdf.googlecode.com/files/wkhtmltopdf-0.9.9-OS-X.i368
+#url = http://wkhtmltopdf.googlecode.com/files/wkhtmltopdf-0.9.9-OS-X.i368
+url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.1-dev/wkhtmltox-0.12.1-79f3688_osx-carbon-i386.pkg
+filename = wkhtmltox.pkg
 download-only = true
 
-[wkhtmltopdf_executable]
-cmds=  
-  cd ${buildout:directory}/parts/wkhtmltopdf
-  mv wkhtmltopdf-0.9.9-OS-X.i368 wkhtmltopdf
-  chmod +x wkhtmltopdf
+[wkhtmltopdf_install]
+cmds =
+  cd ${wkhtmltopdf:location}
+  xar -xf ${wkhtmltopdf:filename}
+  cat Payload | gunzip -dc | cpio -i
+  tar xJf ./usr/local/share/installer/wkhtmltox/app.tar.xz
+binary = ${wkhtmltopdf:location}/bin/wkhtmltopdf
