--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -43,6 +43,6 @@ recipe = zc.recipe.testrunner
 defaults = ['--exit-with-status', '--auto-color', '--auto-progress']
 eggs =
     ${buildout:eggs}
-    pdfminer
+    collective.sendaspdf[test]
 
 environment = environment
