--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y xz-utils
+  - sudo apt-get install -y xz-utils libxrender1
   
 install:
   - $(which echo) -e "[buildout]\nextends = buildout.d/travis.cfg" > buildout.cfg
