--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -44,7 +44,8 @@ environment-vars =
 # ==========================================
 [wkhtmltopdf]
 recipe = hexagonit.recipe.download
-url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.0/wkhtmltox-linux-i386_0.12.0-03c001d.tar.xz
+# url = http://downloads.sourceforge.net/project/wkhtmltopdf/archive/0.12.0/wkhtmltox-linux-amd64_0.12.0-03c001d.tar.xz
+url = http://optimate.dl.sourceforge.net/project/wkhtmltopdf/archive/0.12.0/wkhtmltox-linux-amd64_0.12.0-03c001d.tar.xz
 filename = wkhtmltox.tar.xz
 download-only = true
 
