Move eggs from buildout to instance section.
This is an attempt to keep them out of the bin/buildout script,
though it does not work.

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -8,9 +8,6 @@ develop = .
 
 extensions =
     buildout_versions
-eggs =
-     Plone
-     collective.sendaspdf
 parts =
     scripts
     wkhtmltopdf
@@ -24,7 +21,7 @@ parts =
 recipe = z3c.recipe.scripts
 dependent-scripts = true
 interpreter = zopepy
-eggs = ${buildout:eggs}
+eggs = ${instance:eggs}
 
 # ==================================
 # Create a development Zope instance
@@ -35,7 +32,9 @@ user = admin:admin
 zserver-threads = 7
 debug-mode = off
 verbose-security = on
-eggs = ${buildout:eggs}
+eggs =
+     Plone
+     collective.sendaspdf
 environment-vars =
     WKHTMLTOPDF_PATH ${wkhtmltopdf_install:binary}
 
