--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -20,7 +20,7 @@ auto-checkout =
 # ===============================================
 [omelette]
 recipe = collective.recipe.omelette
-eggs = ${buildout:eggs}
+eggs = ${instance:eggs}
 
 
 # ======================================
@@ -42,7 +42,7 @@ WKHTMLTOPDF_PATH=${buildout:directory}/parts/wkhtmltopdf/wkhtmltopdf
 recipe = zc.recipe.testrunner
 defaults = ['--exit-with-status', '--auto-color', '--auto-progress']
 eggs =
-    ${buildout:eggs}
+    ${instance:eggs}
     collective.sendaspdf[test]
 
 environment = environment
