development.cfg: set WKHTMLTOPDF_PATH correctly in the environment.

--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -35,7 +35,7 @@ interpreter = ${buildout:directory}/bin/zopepy
 # Prepare test-runner for running unit tests
 # ==========================================
 [environment]
-WKHTMLTOPDF_PATH=${buildout:directory}/parts/wkhtmltopdf/wkhtmltopdf
+WKHTMLTOPDF_PATH= ${wkhtmltopdf_install:binary}
 
 
 [test]
