wkhtmltox is now being distributed as packages
Convert the .deb to .tar.xz;
unpack in a predictable location;
adjust paths.

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -37,14 +37,15 @@ debug-mode = off
 verbose-security = on
 eggs = ${buildout:eggs}
 environment-vars =
-    WKHTMLTOPDF_PATH ${wkhtmltopdf:location}/wkhtmltopdf
+    WKHTMLTOPDF_PATH ${wkhtmltopdf:location}/bin/wkhtmltopdf
 
 # ==========================================
 # Download wkhtmltopdf
 # ==========================================
 [wkhtmltopdf]
 recipe = hexagonit.recipe.download
-url = http://wkhtmltopdf.googlecode.com/files/wkhtmltopdf-0.9.9-static-amd64.tar.bz2
+filename = wkhtmltopdf.deb
+url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.1/wkhtmltox-0.12.1_linux-trusty-i386.deb
 
 # ==========================================
 # Unpack / rename the executable
@@ -55,5 +56,5 @@ on_install = true
 on_update = true
 cmds =
      cd ${buildout:directory}/parts/wkhtmltopdf
-     mv wkhtmltopdf-amd64 wkhtmltopdf
-     chmod +x wkhtmltopdf
+     ar x wkhtmltopdf.deb
+     tar xJf data.tar.xz --strip-components=3
