Another place to update with newer wkhtmltopdf version

--- a/buildout.d/travis.cfg
+++ b/buildout.d/travis.cfg
@@ -25,10 +25,15 @@ parts -=
     sphinxbuilder
 
 [wkhtmltopdf]
-url = http://wkhtmltopdf.googlecode.com/files/wkhtmltopdf-0.9.9-static-i386.tar.bz2
+recipe = hexagonit.recipe.download
+filename = wkhtmltopdf.deb
+url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.1/wkhtmltox-0.12.1_linux-trusty-i386.deb
 
 [wkhtmltopdf_executable]
+recipe = collective.recipe.cmd
+on_install = true
+on_update = true
 cmds =
      cd ${buildout:directory}/parts/wkhtmltopdf
-     mv wkhtmltopdf-i386 wkhtmltopdf
-     chmod +x wkhtmltopdf
+     ar x wkhtmltopdf.deb
+     tar xJf data.tar.xz --strip-components=3
