--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -69,7 +69,7 @@ environment = environment
 [wkhtmltopdf]
 recipe = hexagonit.recipe.download
 filename = wkhtmltopdf.deb
-url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.1/wkhtmltox-0.12.1_linux-trusty-i386.deb
+url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.2.1/wkhtmltox-0.12.2.1_linux-trusty-i386.deb
 
 [wkhtmltopdf_install]
 recipe = collective.recipe.cmd
@@ -79,3 +79,5 @@ cmds =
      cd ${buildout:directory}/parts/wkhtmltopdf
      ar x wkhtmltopdf.deb
      tar xJf data.tar.xz --strip-components=3
+# This is not used by the recipe, it just shows where the binary finally ends up.
+binary = ${wkhtmltopdf:location}/wkhtmltox/bin/wkhtmltopdf
