--- a/buildout.d/osx.cfg
+++ b/buildout.d/osx.cfg
@@ -2,8 +2,7 @@
 # MacOS version of wkhtmltopdf
 # ==========================================
 [wkhtmltopdf]
-#url = http://wkhtmltopdf.googlecode.com/files/wkhtmltopdf-0.9.9-OS-X.i368
-url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.1-dev/wkhtmltox-0.12.1-79f3688_osx-carbon-i386.pkg
+url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.2.1/wkhtmltox-0.12.2.1_osx-cocoa-x86-64.pkg
 filename = wkhtmltox.pkg
 download-only = true
 
@@ -12,5 +11,5 @@ cmds =
   cd ${wkhtmltopdf:location}
   xar -xf ${wkhtmltopdf:filename}
   cat Payload | gunzip -dc | cpio -i
-  tar xJf ./usr/local/share/installer/wkhtmltox/app.tar.xz
+  tar xJf ./usr/local/share/wkhtmltox-installer/app.tar.xz
 binary = ${wkhtmltopdf:location}/bin/wkhtmltopdf
