buildout: only download deb.

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -70,6 +70,7 @@ environment = environment
 recipe = hexagonit.recipe.download
 filename = wkhtmltopdf.deb
 url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.2.1/wkhtmltox-0.12.2.1_linux-trusty-i386.deb
+download-only = true
 
 [wkhtmltopdf_install]
 recipe = collective.recipe.cmd
