Use the defined wk binary path.

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -43,7 +43,7 @@ eggs =
      Plone
      collective.sendaspdf
 environment-vars =
-    WKHTMLTOPDF_PATH ${wkhtmltopdf:location}/bin/wkhtmltopdf
+    WKHTMLTOPDF_PATH ${environment:WKHTMLTOPDF_PATH}
 
 # ===============================================
 # Mirrors python namespaces into one handy folder
