--- a/buildout.d/osx.cfg
+++ b/buildout.d/osx.cfg
@@ -4,7 +4,8 @@
 [wkhtmltopdf]
 #url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.2.1/wkhtmltox-0.12.2.1_osx-cocoa-x86-64.pkg
 # The 64 bit has problems. https://github.com/wkhtmltopdf/wkhtmltopdf/issues/2196
-url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.2.1/wkhtmltox-0.12.2.1_osx-carbon-i386.pkg
+#url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.2.1/wkhtmltox-0.12.2.1_osx-carbon-i386.pkg
+url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.2/wkhtmltox-0.12.2_osx-carbon-i386.pkg
 filename = wkhtmltox.pkg
 download-only = true
 
