--- a/buildout.d/osx.cfg
+++ b/buildout.d/osx.cfg
@@ -2,10 +2,10 @@
 # MacOS version of wkhtmltopdf
 # ==========================================
 [wkhtmltopdf]
-#url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.2.1/wkhtmltox-0.12.2.1_osx-cocoa-x86-64.pkg
+# url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.2.1/wkhtmltox-0.12.2.1_osx-cocoa-x86-64.pkg
 # The 64 bit has problems. https://github.com/wkhtmltopdf/wkhtmltopdf/issues/2196
-#url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.2.1/wkhtmltox-0.12.2.1_osx-carbon-i386.pkg
-url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.2/wkhtmltox-0.12.2_osx-carbon-i386.pkg
+# url = http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.2.1/wkhtmltox-0.12.2.1_osx-carbon-i386.pkg
+url = http://downloads.sourceforge.net/project/wkhtmltopdf/archive/0.12.2/wkhtmltox-0.12.2_osx-cocoa-x86-64.pkg
 filename = wkhtmltox.pkg
 download-only = true
 
