Travis: change call of binary wkhtmltopdf.
This Travis output makes no sense to me:

$ ls -l ./parts/wkhtmltopdf/bin
total 76608
-rwxr-xr-x 1 travis travis 39182316 Jan  9 23:11 wkhtmltoimage
-rwxr-xr-x 1 travis travis 39264236 Jan  9 23:10 wkhtmltopdf
$ ./parts/wkhtmltopdf/bin/wkhtmltopdf || true
/home/travis/build.sh: line 41: ./parts/wkhtmltopdf/bin/wkhtmltopdf: No such file or directory

I think I struggled with this before, and never really got it to work.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,14 @@ install:
   - sudo apt-get install -qq pep8 pyflakes
   - python bootstrap.py
   - bin/buildout install wkhtmltopdf wkhtmltopdf_install
-  - ls -l ./parts/wkhtmltopdf/
-  - ls -l ./parts/wkhtmltopdf/bin
-  - ./parts/wkhtmltopdf/bin/wkhtmltopdf || true
+  - ls -l parts/wkhtmltopdf/
+  - ls -l parts/wkhtmltopdf/bin
+  - ls -l parts/wkhtmltopdf/bin/wkhtmltopdf || true
+  - parts/wkhtmltopdf/bin/wkhtmltopdf || true
+  - parts/wkhtmltopdf/bin/wkhtmltopdf http://www.google.com google.pdf || true
   - bin/buildout
 
 script:
-  - ./parts/wkhtmltopdf/bin/wkhtmltopdf http://www.google.com google.pdf
   - bin/test -m collective.sendaspdf
   - pyflakes collective
   - pep8 collective 
