Travis: just install a .deb package of wkhtmltopdf.
It just does not work with buildout, at least not on Travis.
And a debian package sounds good, especially on Travis.

--- a/buildout.d/travis.cfg
+++ b/buildout.d/travis.cfg
@@ -22,3 +22,10 @@ allow-hosts =
 # disable some parts, again for performance reasons
 parts -=
     omelette
+    wkhtmltopdf
+    wkhtmltopdf_install
+
+[environment]
+# Installing wkhtmltopdf with buildout in Travis has never really
+# worked.  So in .travis.yml we should install the debian package.
+WKHTMLTOPDF_PATH = wkhtmltopdf
