--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,14 @@ python:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y xz-utils libxrender1
-  
+  - curl -o wkhtmltopdf.deb http://downloads.sourceforge.net/project/wkhtmltopdf/archive/0.12.2/wkhtmltox-0.12.2_linux-trusty-i386.deb
+  - sudo dpkg --install wkhtmltopdf.deb
+  - wkhtmltopdf http://www.google.com google.pdf
+
 install:
   - $(which echo) -e "[buildout]\nextends = buildout.d/travis.cfg" > buildout.cfg
   - sudo apt-get install -qq pep8 pyflakes
   - python bootstrap.py
-  - bin/buildout install wkhtmltopdf wkhtmltopdf_install
-  - ls -l parts/wkhtmltopdf/
-  - ls -l parts/wkhtmltopdf/bin
-  - ls -l parts/wkhtmltopdf/bin/wkhtmltopdf || true
-  - parts/wkhtmltopdf/bin/wkhtmltopdf || true
-  - parts/wkhtmltopdf/bin/wkhtmltopdf http://www.google.com google.pdf || true
   - bin/buildout
 
 script:
