Travis: use gdebi to install wkhtmltopdf including dependencies.
No idea if it is available.
http://askubuntu.com/questions/40011/how-to-let-dpkg-i-install-dependencies-for-me

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ python:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y xz-utils libxrender1
+  - sudo apt-get install -y xz-utils libxrender1 gdebi-core
   - curl --location --output wkhtmltopdf.deb http://downloads.sourceforge.net/project/wkhtmltopdf/archive/0.12.2/wkhtmltox-0.12.2_linux-trusty-i386.deb
-  - sudo dpkg --install wkhtmltopdf.deb
+  - sudo gdebi wkhtmltopdf.deb
   - wkhtmltopdf http://www.google.com google.pdf
 
 install:
