--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y xz-utils libxrender1 gdebi-core
   - curl --location --output wkhtmltopdf.deb http://downloads.sourceforge.net/project/wkhtmltopdf/archive/0.12.2/wkhtmltox-0.12.2_linux-trusty-i386.deb
-  - sudo gdebi wkhtmltopdf.deb
+  - sudo gdebi --non-interactive wkhtmltopdf.deb
   - wkhtmltopdf http://www.google.com google.pdf
 
 install:
