--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,13 @@ python:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y xz-utils libxrender1 gdebi-core
+  - sudo apt-get install -y xz-utils libxrender1 gdebi-core pep8 pyflakes
   - curl --location --output wkhtmltopdf.deb http://downloads.sourceforge.net/project/wkhtmltopdf/archive/0.12.2/wkhtmltox-0.12.2_linux-trusty-i386.deb
   - sudo gdebi --non-interactive wkhtmltopdf.deb
   - wkhtmltopdf http://www.google.com google.pdf
 
 install:
   - $(which echo) -e "[buildout]\nextends = buildout.d/travis.cfg" > buildout.cfg
-  - sudo apt-get install -qq pep8 pyflakes
   - python bootstrap.py
   - bin/buildout
 
